<resources>
    <string name="app_name">IMC 2.0</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="login">LOGIN</string>
    <string name="your_email">Your e-mail</string>
    <string name="your_pass">Your password</string>
    <string name="new_user">Sign up</string>
    <string name="logo_name">SENAI</string>

    <string name="signup_new_user">New user\'s register</string>
    <string name="edit_name_label">Name:</string>
    <string name="edit_email_label">E-mail:</string>
    <string name="edit_pass_label">Password:</string>
    <string name="edit_weight_label">Weight:</string>
    <string name="edit_height_label">Height:</string>
    <string name="hint_name">Insert your name</string>
    <string name="hint_email">Insert your E-mail</string>
    <string name="hint_password">Create your password</string>
    <string name="hint_height">Insert your height</string>
    <string name="hint_weight">Insert your weight</string>
    <string name="button_text_login">Save user</string>
    <string name="login_text">Login</string>

    <string name="user_name">User name</string>
    <string name="user_email">User\'s e-mail</string>
    <string name="weight_value">Weight : xx</string>
    <string name="calculate_text">Shall we calculate your body mass index now?</string>
    <string name="height_value">Height : x.xx</string>
    <string name="button_calculate_text">Calculate</string>
    <string name="result_text">This is the result of your BMI</string>
    <string name="below_weight">Below the healthy weight</string>
    <string name="normal_weight">Normal weight</string>
    <string name="slightly_above_weight">Slightly above the normal weight</string>
    <string name="obesity_I">Obesity I</string>
    <string name="obesity_II">"Obesity II "</string>
    <string name="obesity_III">Obesity III (Morbid)</string>
    <string name="back_button">Back</string>

</resources>