<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bmi"
        android:textColor="@color/red_senai"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:text="@string/calculator"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_bmi"
        app:layout_constraintTop_toBottomOf="@+id/text_bmi" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/black_senai"
        android:gravity="center_horizontal|end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:layout_weight="0"
            android:fontFamily="@font/roboto"
            android:text="@string/logo_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_email_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_mail_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/red_senai"
        android:ems="10"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/text_login"
        app:layout_constraintTop_toBottomOf="@+id/text_login" />

    <EditText
        android:id="@+id/edit_text_password_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/red_senai"
        android:ems="10"
        android:hint="@string/your_pass"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_email_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edit_text_email_login"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email_login" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/text_signup"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password_login"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password_login" />

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/new_user"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>